2005-03-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in (AR): use @AR@
	* configure, tclconfig/tcl.m4: TEA 3.2 patch update

2005-02-14  Jean-Claude Wippler  <jcw@equi4.com>

	* configure, configure.in, tclconfig/tcl.m4: update from sample

2005-02-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure, configure.in, tclconfig/tcl.m4: update to TEA 3.2

2005-01-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure, configure.in (BUILD_vfs): correct from sample default

2005-01-20  Jean-Claude Wippler  <jcw@equi4.com>

	* library/mk4vfs.tcl: added return in periodicCommit

2004-11-22  Andreas Kupries <andreask@activestate.com>

	* Makefile.in (PKG_TCL_SOURCES): Added 'tkvfs.tcl' to the list of
	  installed files. It is listed in the package index, but was not
	  installed.

2004-09-28  Vince Darley <vincentdarley@sourceforge.net>

	* win/makefile.vc: some cleanup of makefile to allow compilation
	  with more than just VC++ 5.x.

2004-09-13  Vince Darley <vincentdarley@sourceforge.net>

	* generic/vfs.c: fix to crash if TclVfsAttr(Set|Get) are called
	  with a NULL interp for error reporting. [Bug 1022202]

2004-08-05  Andreas Kupries  <andreask@activestate.com>

	* library/zipvfs.tcl (Data): Fixed [SF Tclvfs Bug 1003591]. This
	  reverts an incomplete and unrecorded fix for handling dashes at
	  the beginning of data, giving precedence to '2004-07-04 @
	  library/vfsUtils.tcl' instead, see below. The unrecorded fix was
	  entered two days before and clashes with the other one. As it
	  was incomplete the other fix was chosen, despite coming later.

2004-08-04  Andreas Kupries  <andreask@activestate.com>

	* library/zipvfs.tcl (EndOfArchive): Fixed [SF Tclvfs Bug
	  1003574]. Added code preventing us from seeking before the
	  beginning of the zip file.

2004-07-15  Andreas Kupries  <andreask@activestate.com>

	* doc/vfs-fsapi.man: Clarified description of the close callback
	the handler method 'open' may set up. Especially noted that